# test-mingw-dxlib-cpp

./: CMakeLists.txt
.cache/clangd/index/: main.cc.0476F70FA935994A.idx
src/: main.cc
