cmake_minimum_required(VERSION 3.2)
set(CMAKE_C_COMPILER gcc)
set(CMAKE_CXX_COMPILER g++)
project(MAIN)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin/)
set(CMAKE_CXX_FLAGS -static)
set(DXLIB_DIR  C:\\Users\\daruma\\use-lib\\dxlib-mingw32-6.3\\)
add_compile_definitions(DX_GCC_COMPILE DX_NON_INLINE_ASM)
add_executable(MAIN src/main.cc )
target_compile_options(MAIN PRIVATE "-Wall" "-m32" "-mwindows")
target_include_directories(MAIN PRIVATE  ${DXLIB_DIR})
target_link_directories(MAIN PRIVATE ${DXLIB_DIR})
target_link_libraries(MAIN PRIVATE -m32 -mwindows  DxLib DxUseCLib  DxDrawFunc  jpeg  png  zlib  tiff  theora_static  vorbis_static  vorbisfile_static  ogg_static  bulletdynamics  bulletcollision  bulletmath  opusfile  opus  silk_common  celt )
